--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -66,12 +66,12 @@ html {
    margin: 0;
    padding: 0;
 
-
+   overflow-x: hidden;
 
 }
 
 body {
-
+   overflow-x: hidden;
    box-sizing: border-box;
    font-family: 'GTWalsheimPro-Medium';
 
