--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ h2 {
   max-width: 1376px;
 }
 
-.footer .footer__button, .attraction .attraction__inner .attraction__item .attraction__item-btn, .header__btn {
+.footer__button, .attraction__item-btn, .header__btn {
   padding: 11px 30px 11px 30px;
   background: #5C6BD7;
   border-radius: 13px;
@@ -136,7 +136,8 @@ h2 {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-.header__inner .header__item .header__item-title {
+
+.header__item-title {
   margin-top: 163px;
   font-size: 128px;
   line-height: 147px;
@@ -145,11 +146,12 @@ h2 {
   padding: 10px;
   color: #3D3745;
 }
-.header__inner .header__item .header__item-title .header__item-span {
+
+.header__item-span {
   color: #fff;
 }
 
-.intro .intro__inner {
+.intro__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -157,10 +159,12 @@ h2 {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.intro .intro__inner .intro__item:first-child {
+
+.intro__item:first-child {
   padding-right: 10px;
 }
-.intro .intro__inner .intro__item .intro__text {
+
+.intro__text {
   max-width: 459px;
   width: 100%;
   padding: 34px 0 40px 0;
@@ -168,11 +172,13 @@ h2 {
   line-height: 37px;
   color: #3D3745;
 }
-.intro .intro__inner .intro__item .intro__hr {
+
+.intro__hr {
   border: 2px solid #EBEAEC;
   border-radius: 13px;
 }
-.intro .intro__inner .intro__item .intro__img {
+
+.intro__img {
   width: 100%;
   max-width: 761px;
   position: relative;
@@ -185,8 +191,12 @@ h2 {
 
 .attraction {
   margin-top: 200px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1376px;
 }
-.attraction .attraction__inner-background {
+
+.attraction__inner-background {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -201,7 +211,7 @@ h2 {
   background-repeat: no-repeat;
   background-image: url("../img/attraction__background.png");
 }
-.attraction .attraction__inner-background .attraction__img-phone {
+.attraction__inner-background .attraction__img-phone {
   position: absolute;
   width: 100%;
   -o-object-fit: contain;
@@ -211,13 +221,15 @@ h2 {
   right: 31px;
   bottom: -50px;
 }
-.attraction .attraction__inner-background .attraction__title {
+.attraction__inner-background .attraction__title {
+  margin-top: 30px;
   font-size: 96px;
   line-height: 110px;
   text-transform: uppercase;
   color: #F27C4F;
 }
-.attraction .attraction__inner {
+
+.attraction__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -230,7 +242,8 @@ h2 {
       -ms-flex-align: end;
           align-items: flex-end;
 }
-.attraction .attraction__inner .attraction__item .attraction__item-text {
+
+.attraction__item-text {
   font-size: 40px;
   line-height: 46px;
   max-width: 882px;
@@ -238,14 +251,20 @@ h2 {
   color: #3D3745;
   margin-top: 50px;
 }
-.attraction .attraction__inner .attraction__item .attraction__item-btn {
+
+.attraction__item {
+  padding: 0 10px;
+}
+
+.attraction__item-btn {
   margin-top: 10px;
 }
 
 .about_us {
   margin-top: 129px;
 }
-.about_us .about_us__inner {
+
+.about_us__inner {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -256,18 +275,21 @@ h2 {
       -ms-flex-align: center;
           align-items: center;
 }
-.about_us .about_us__inner .about_us__item .about_us__img1 {
+
+.about_us__img1 {
   width: 100%;
   max-width: 557px;
   height: 649px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.about_us .about_us__inner .about_us__item .about_us__img--phone {
+
+.about_us__img--phone {
   margin-top: -194px;
   margin-left: 110px;
 }
-.about_us .about_us__inner .about_us__item .about_us__title {
+
+.about_us__title {
   font-size: 54px;
   line-height: 62px;
   margin-top: 70px;
@@ -275,16 +297,19 @@ h2 {
   text-transform: uppercase;
   color: #3D3745;
 }
-.about_us .about_us__inner .about_us__item .about_us__text {
+
+.about_us__text {
   font-size: 32px;
   line-height: 37px;
   max-width: 719px;
   color: #3D3745;
 }
-.about_us .about_us__inner .about_us__item .about_us__img {
+
+.about_us__img {
   padding: 10px;
 }
-.about_us .about_us__row {
+
+.about_us__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -292,27 +317,32 @@ h2 {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.about_us .about_us__row .about_us__img--row {
+.about_us__row .about_us__img--row {
   z-index: -1;
   margin-top: -78px;
+  width: 100%;
+  max-width: 739px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-.about_us .about_us__inner-last {
+
+.about_us__inner-last {
   margin-top: 120px;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
 }
-.about_us .about_us__inner-last .about_us__item-last {
+.about_us__inner-last .about_us__item-last {
   position: relative;
 }
-.about_us .about_us__inner-last .about_us__img3 {
+.about_us__inner-last .about_us__img3 {
   max-width: 615px;
   height: 698px;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.about_us .about_us__inner-last .about_us__img--phone2 {
+.about_us__inner-last .about_us__img--phone2 {
   max-width: 219px;
   height: 439px;
   width: 100%;
@@ -322,10 +352,10 @@ h2 {
   top: 291px;
   left: -30px;
 }
-.about_us .about_us__inner-last .about_us__title {
+.about_us__inner-last .about_us__title {
   width: 326px;
 }
-.about_us .about_us__inner-last .about_us__text {
+.about_us__inner-last .about_us__text {
   width: 527px;
 }
 
@@ -341,7 +371,8 @@ h2 {
   text-align: center;
   border-radius: 35px 35px 0 0;
 }
-.footer .footer__text {
+
+.footer__text {
   font-size: 32px;
   line-height: 37px;
   padding: 0 10px;
@@ -349,10 +380,12 @@ h2 {
   color: #FBFBFB;
   padding: 73px 196px 0 196px;
 }
-.footer .footer__button {
+
+.footer__button {
   margin: 78px 0 58px 0;
 }
-.footer .footer__inner {
+
+.footer__inner {
   background-color: #EBEAEC;
   padding: 43px 0;
   display: -webkit-box;
@@ -367,13 +400,13 @@ h2 {
       -ms-flex-align: center;
           align-items: center;
 }
-.footer .footer__inner .footer__item {
+.footer__inner .footer__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding: 0 10px;
 }
-.footer .footer__inner .footer__item .privacy__policy {
+.footer__inner .footer__item .privacy__policy {
   font-size: 14px;
   line-height: 16px;
   text-align: center;
@@ -381,7 +414,7 @@ h2 {
   color: #3D3745;
   padding: 0 39px 0 0;
 }
-.footer .footer__inner .footer__item .copyright {
+.footer__inner .footer__item .copyright {
   font-size: 14px;
   line-height: 16px;
   text-align: center;
@@ -390,7 +423,7 @@ h2 {
 }
 
 @media (max-width: 1288px) {
-  .header__inner .header__item .header__item-title {
+  .header__item-title {
     margin-top: 10px;
   }
   .header__item-logo {
@@ -412,12 +445,184 @@ h2 {
   .intro__text {
     max-width: 459px;
     width: 100%;
-    padding: 34px 0 40px 0;
-    font-size: 32px;
-    line-height: 37px;
+    padding: 15px 0;
+    font-size: 25px;
     color: #3D3745;
   }
-  .intro .intro__inner .intro__item .intro__text {
+  .intro__text {
     padding: 20px 0;
+  }
+}
+@media (max-width: 980px) {
+  .intro__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .intro__inner .intro__img {
+    margin-bottom: 75px;
+    position: relative;
+    right: -15px;
+  }
+  .intro__item:last-child {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .intro__text {
+    max-width: none;
+    text-align: center;
+  }
+}
+@media (max-width: 780px) {
+  .header__item-title {
+    font-size: 75px;
+    line-height: 107px;
+  }
+  .intro__inner .intro__img {
+    left: -15px;
+  }
+  .attraction {
+    margin-top: 80px;
+  }
+  .attraction__inner-background .attraction__img-phone {
+    max-width: 197px;
+    height: 357px;
+    right: -16px;
+  }
+  .attraction__inner-background .attraction__title {
+    font-size: 76px;
+    line-height: 70px;
+  }
+  .attraction__item-text {
+    font-size: 30px;
+    line-height: 36px;
+    margin-top: 60px;
+  }
+}
+@media (max-width: 580px) {
+  .attraction__item-btn {
+    background: #F27C4F;
+  }
+  .header__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header__inner .header__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .header__item-title {
+    font-size: 48px;
+    line-height: 55px;
+    padding: 0;
+    margin: 0;
+  }
+  .header__item-title .header__item-span {
+    color: #3D3745;
+  }
+  .header__item-logo {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .header__item-logo .logo__docer {
+    width: 100%;
+    max-width: 200px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    position: relative;
+  }
+  .header__item-logo .docer__inner {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .header__item-text {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    padding: 24px;
+  }
+  .header__item-btn {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  .header__item-btn .header__btn {
+    margin: 0;
+  }
+  .intro {
+    margin-top: 35px;
+  }
+  .intro .intro__text {
+    font-size: 22px;
+    line-height: 25px;
+  }
+  .intro .intro__img {
+    margin-top: 0;
+  }
+  .attraction__inner-background {
+    height: 400px;
+  }
+  .attraction__inner-background .attraction__img-phone {
+    max-width: 115px;
+    height: 235px;
+    right: -16px;
+    bottom: -30px;
+  }
+  .attraction__inner-background .attraction__title {
+    padding: 0 10px;
+    font-size: 48px;
+    line-height: 55px;
+  }
+  .attraction__inner {
+    background: #5C6BD7;
+    padding: 0 10px 40px 10px;
+  }
+  .attraction__item-text {
+    color: #FFFFFF;
+    font-size: 22px;
+    line-height: 25px;
+  }
+  .attraction__item-block {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .attraction__item-block .attraction__item-btn {
+    margin-top: 35px;
   }
 }
