--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,7 @@
 
 
 
+
 .header {
    width: 100%;
    max-width: 1366px;
@@ -28,229 +29,226 @@
       justify-content: space-around;
       flex-wrap: wrap;
 
-
       .header__item {
          .logo {
             margin-top: 30px;
             margin-bottom: 30px;
          }
-
-
-
-         .header__item-title {
-
-            margin-top: 163px;
-
-            font-size: 128px;
-            line-height: 147px;
-            text-align: center;
-            text-transform: uppercase;
-            padding: 10px;
-            color: #3D3745;
-
-            .header__item-span {
-               color: #fff;
-            }
-         }
-      }
-   }
-
-}
-
-.intro {
-   .intro__inner {
-      display: flex;
-      justify-content: space-between;
-
-      .intro__item:first-child {
-         padding-right: 10px;
-      }
-
-      .intro__item {
-
-
-         .intro__text {
-            max-width: 459px;
-            width: 100%;
-            padding: 34px 0 40px 0;
-            font-size: 32px;
-            line-height: 37px;
-
-            color: #3D3745;
-
-         }
-
-         .intro__hr {
-            border: 2px solid #EBEAEC;
-            border-radius: 13px;
-         }
-
-         .intro__img {
-            width: 100%;
-            max-width: 761px;
-            position: relative;
-
-            object-fit: contain;
-
-            margin-right: 141px;
-            margin-top: -153px;
-            z-index: -1;
-         }
       }
    }
 }
+
+
+.header__item-title {
+   margin-top: 163px;
+   font-size: 128px;
+   line-height: 147px;
+   text-align: center;
+   text-transform: uppercase;
+   padding: 10px;
+   color: #3D3745
+}
+
+.header__item-span {
+   color: #fff;
+}
+
+.intro__inner {
+   display: flex;
+   justify-content: space-between;
+}
+
+.intro__item:first-child {
+   padding-right: 10px;
+}
+
+.intro__text {
+   max-width: 459px;
+   width: 100%;
+   padding: 34px 0 40px 0;
+   font-size: 32px;
+   line-height: 37px;
+   color: #3D3745;
+}
+
+.intro__hr {
+   border: 2px solid #EBEAEC;
+   border-radius: 13px;
+}
+
+.intro__img {
+   width: 100%;
+   max-width: 761px;
+   position: relative;
+   object-fit: contain;
+   margin-right: 141px;
+   margin-top: -153px;
+   z-index: -1;
+}
+
+
 
 .attraction {
    margin-top: 200px;
+   margin: 0 auto;
 
-   .attraction__inner-background {
-      display: flex;
-      justify-content: center;
-      position: relative;
+   width: 100%;
+   max-width: 1376px;
+}
+
+.attraction__inner-background {
+   display: flex;
+   justify-content: center;
+   position: relative;
+   width: 100%;
+   height: 768px;
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-image: url("../img/attraction__background.png");
+
+   .attraction__img-phone {
+      position: absolute;
       width: 100%;
-      height: 768px;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-image: url("../img/attraction__background.png");
-
-      .attraction__img-phone {
-         position: absolute;
-         width: 100%;
-         object-fit: contain;
-         max-width: 227px;
-         height: 457px;
-         right: 31px;
-         bottom: -50px;
-      }
-
-      .attraction__title {
-
-         font-size: 96px;
-         line-height: 110px;
-         text-transform: uppercase;
-         color: #F27C4F;
-      }
+      object-fit: contain;
+      max-width: 227px;
+      height: 457px;
+      right: 31px;
+      bottom: -50px;
    }
 
-   .attraction__inner {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: flex-end;
-
-      .attraction__item {
-         .attraction__item-text {
-            font-size: 40px;
-            line-height: 46px;
-            max-width: 882px;
-            width: 100%;
-            color: #3D3745;
-            margin-top: 50px;
-         }
-
-         .attraction__item-btn {
-            @extend %button;
-            margin-top: 10px;
-         }
-      }
-
-
+   .attraction__title {
+      margin-top: 30px;
+      font-size: 96px;
+      line-height: 110px;
+      text-transform: uppercase;
+      color: #F27C4F;
    }
 }
 
+.attraction__inner {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   align-items: flex-end;
+}
+
+
+.attraction__item-text {
+   font-size: 40px;
+   line-height: 46px;
+   max-width: 882px;
+   width: 100%;
+   color: #3D3745;
+   margin-top: 50px;
+}
+
+.attraction__item {
+   padding: 0 10px;
+
+}
+
+.attraction__item-btn {
+   @extend %button;
+   margin-top: 10px;
+}
+
+
 .about_us {
    margin-top: 129px;
+}
+
+.about_us__inner {
+   position: relative;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+}
+
+.about_us__img1 {
+   width: 100%;
+   max-width: 557px;
+   height: 649px;
+   object-fit: cover;
+}
+
+.about_us__img--phone {
+   margin-top: -194px;
+   margin-left: 110px;
+}
+
+.about_us__title {
+   font-size: 54px;
+   line-height: 62px;
+   margin-top: 70px;
+   margin-bottom: 40px;
+
+   text-transform: uppercase;
+
+   color: #3D3745;
+}
+
+.about_us__text {
+   font-size: 32px;
+   line-height: 37px;
+   max-width: 719px;
+   color: #3D3745;
+}
+
+.about_us__img {
+   padding: 10px;
+}
 
 
-   .about_us__inner {
+
+
+
+
+.about_us__row {
+   display: flex;
+   justify-content: center;
+
+   .about_us__img--row {
+      z-index: -1;
+      margin-top: -78px;
+      width: 100%;
+      max-width: 739px;
+
+      object-fit: cover;
+   }
+}
+
+.about_us__inner-last {
+   margin-top: 120px;
+   align-items: flex-start;
+
+   .about_us__item-last {
       position: relative;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-
-      .about_us__item {
-         .about_us__img1 {
-            width: 100%;
-            max-width: 557px;
-            height: 649px;
-            object-fit: cover;
-         }
-
-         .about_us__img--phone {
-            margin-top: -194px;
-            margin-left: 110px;
-         }
-
-         .about_us__title {
-            font-size: 54px;
-            line-height: 62px;
-            margin-top: 70px;
-            margin-bottom: 40px;
-
-            text-transform: uppercase;
-
-            color: #3D3745;
-         }
-
-         .about_us__text {
-            font-size: 32px;
-            line-height: 37px;
-            max-width: 719px;
-            color: #3D3745;
-         }
-
-         .about_us__img {
-            padding: 10px;
-         }
-      }
-
-
-
    }
 
-   .about_us__row {
-      display: flex;
-      justify-content: center;
-
-      .about_us__img--row {
-         z-index: -1;
-         margin-top: -78px;
-      }
+   .about_us__img3 {
+      max-width: 615px;
+      height: 698px;
+      width: 100%;
+      object-fit: cover;
    }
 
-   .about_us__inner-last {
-      margin-top: 120px;
-      align-items: flex-start;
+   .about_us__img--phone2 {
+      max-width: 219px;
+      height: 439px;
+      width: 100%;
+      object-fit: cover;
+      position: absolute;
+      top: 291px;
+      left: -30px;
+   }
 
-      .about_us__item-last {
-         position: relative;
-      }
+   .about_us__title {
+      width: 326px;
+   }
 
-      .about_us__img3 {
-         max-width: 615px;
-         height: 698px;
-         width: 100%;
-         object-fit: cover;
-      }
-
-      .about_us__img--phone2 {
-         max-width: 219px;
-         height: 439px;
-         width: 100%;
-         object-fit: cover;
-         position: absolute;
-         top: 291px;
-         left: -30px;
-      }
-
-      .about_us__title {
-         width: 326px;
-      }
-
-      .about_us__text {
-         width: 527px;
-      }
+   .about_us__text {
+      width: 527px;
    }
 }
 
@@ -267,120 +265,54 @@
    text-align: center;
    border-radius: 35px 35px 0 0;
 
-   .footer__text {
-      font-size: 32px;
-      line-height: 37px;
-      padding: 0 10px;
-      text-transform: uppercase;
 
-      color: #FBFBFB;
-      padding: 73px 196px 0 196px;
-   }
+}
 
-   .footer__button {
-      margin: 78px 0 58px 0;
-      @extend %button;
-   }
+.footer__text {
+   font-size: 32px;
+   line-height: 37px;
+   padding: 0 10px;
+   text-transform: uppercase;
 
-   .footer__inner {
-      background-color: #EBEAEC;
-      padding: 43px 0;
+   color: #FBFBFB;
+   padding: 73px 196px 0 196px;
+}
+
+.footer__button {
+   margin: 78px 0 58px 0;
+   @extend %button;
+}
+
+.footer__inner {
+   background-color: #EBEAEC;
+   padding: 43px 0;
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   align-items: center;
+
+   .footer__item {
       display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      align-items: center;
+      padding: 0 10px;
 
-      .footer__item {
-         display: flex;
-         padding: 0 10px;
-
-
-
-         .privacy__policy {
-            font-size: 14px;
-            line-height: 16px;
-
-
-            text-align: center;
-            text-transform: uppercase;
-
-            color: #3D3745;
-            padding: 0 39px 0 0;
-         }
-
-         .copyright {
-            font-size: 14px;
-            line-height: 16px;
-
-
-            text-align: center;
-            text-transform: uppercase;
-
-            color: #3D3745;
-         }
-
-
+      .privacy__policy {
+         font-size: 14px;
+         line-height: 16px;
+         text-align: center;
+         text-transform: uppercase;
+         color: #3D3745;
+         padding: 0 39px 0 0;
       }
+
+      .copyright {
+         font-size: 14px;
+         line-height: 16px;
+         text-align: center;
+         text-transform: uppercase;
+         color: #3D3745;
+      }
+
    }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width:1288px) {
-   .header__inner .header__item .header__item-title {
-      margin-top: 10px;
-   }
-
-   .header__item-logo {
-      order: 1;
-
-   }
-
-   .header__item-text {
-      order: 3;
-      padding: 20px;
-   }
-
-   .header__item-btn {
-      order: 2;
-
-
-   }
-
-   .intro__text {
-      max-width: 459px;
-      width: 100%;
-      padding: 34px 0 40px 0;
-      font-size: 32px;
-      line-height: 37px;
-
-      color: #3D3745;
-
-   }
-
-   .intro .intro__inner .intro__item .intro__text {
-      padding: 20px 0;
-   }
-}
+@import "media.scss";
