--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,6 @@ h2 {
 .footer__text {
   font-size: 32px;
   line-height: 37px;
-  padding: 0 10px;
   text-transform: uppercase;
   color: #FBFBFB;
   padding: 73px 196px 0 196px;
@@ -452,6 +451,9 @@ h2 {
   .intro__text {
     padding: 20px 0;
   }
+  .about_us__text {
+    margin: 15px 0 15px 0;
+  }
 }
 @media (max-width: 980px) {
   .intro__inner {
@@ -480,6 +482,54 @@ h2 {
     max-width: none;
     text-align: center;
   }
+  .about_us__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .about_us__row {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .about_us__img--phone {
+    margin-left: 0;
+  }
+  .about_us__inner-last {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    margin-top: 30px;
+  }
+  .about_us__inner-last .about_us__item-last {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+  }
+  .about_us__inner-last .about_us__img3 {
+    -o-object-position: center top;
+       object-position: center top;
+  }
+  .about_us__inner-last .about_us__img--phone2 {
+    right: 34px;
+    left: auto;
+  }
+  .about_us__img {
+    width: 100%;
+    max-width: 500px;
+    height: 400px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
 @media (max-width: 780px) {
   .header__item-title {
@@ -505,6 +555,39 @@ h2 {
     font-size: 30px;
     line-height: 36px;
     margin-top: 60px;
+  }
+  .about_us__inner-last .about_us__text {
+    width: 100%;
+  }
+  .about_us__title {
+    font-size: 36px;
+    line-height: 41px;
+    margin: 0 0 15px 0;
+  }
+  .about_us__text {
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 51px;
+  }
+  .about_us__row .about_us__img--row {
+    margin-right: -170px;
+  }
+  .about_us__title--last {
+    margin-top: 101px;
+  }
+  .about_us__inner-last .about_us__title {
+    width: 100%;
+  }
+  .footer {
+    margin-top: 55px;
+  }
+  .footer__text {
+    padding: 69px 35px 97px 35px;
+    font-size: 22px;
+    line-height: 25px;
+  }
+  .footer__button {
+    margin: 0 0 64px 0;
   }
 }
 @media (max-width: 580px) {
@@ -624,5 +707,78 @@ h2 {
   }
   .attraction__item-block .attraction__item-btn {
     margin-top: 35px;
+  }
+  .about_us__inner-last {
+    margin-top: 0;
+  }
+  .about_us__inner-last .about_us__img3 {
+    max-width: 345px;
+    height: 392px;
+  }
+  .about_us__inner-last .about_us__img--phone2 {
+    right: 34px;
+    left: auto;
+    max-width: 137px;
+    height: 274px;
+    top: 191px;
+  }
+  .about_us__img {
+    width: 100%;
+    max-width: 242px;
+    height: 305px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .about_us__row .about_us__img--row {
+    margin-right: -100px;
+  }
+  .about_us__img--phone {
+    width: 100%;
+    max-width: 145px;
+    margin-left: 30px;
+    height: 274px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    margin-bottom: 51px;
+  }
+  .footer__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__inner .footer__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    text-align: center;
+  }
+  .footer__inner .footer__item .privacy__policy {
+    padding: 0;
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  .footer__inner .footer__item .copyright {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin: 34px 0 15px 0;
+  }
+}
+@media (max-width: 480px) {
+  .header__item-title {
+    font-size: 38px;
+  }
+  .about_us__inner-last .about_us__img--phone2 {
+    right: -18px;
   }
 }
