--- a/scss/media.scss
+++ b/scss/media.scss
@@ -35,6 +35,12 @@
    .intro__text {
       padding: 20px 0;
    }
+
+   .about_us__text {
+
+      margin: 15px 0 15px 0;
+   }
+
 }
 
 @media (max-width:980px) {
@@ -60,6 +66,45 @@
       text-align: center;
    }
 
+   .about_us__inner {
+      flex-direction: column;
+      align-items: flex-start;
+   }
+
+   .about_us__row {
+      justify-content: flex-end;
+   }
+
+   .about_us__img--phone {
+      margin-left: 0;
+   }
+
+   .about_us__inner-last {
+      flex-direction: column-reverse;
+      margin-top: 30px;
+
+      .about_us__item-last {
+         display: flex;
+         justify-content: center;
+         width: 100%;
+      }
+
+      .about_us__img3 {
+         object-position: center top;
+      }
+
+      .about_us__img--phone2 {
+         right: 34px;
+         left: auto;
+      }
+   }
+
+   .about_us__img {
+      width: 100%;
+      max-width: 500px;
+      height: 400px;
+      object-fit: cover;
+   }
 
 }
 
@@ -104,6 +149,50 @@
       line-height: 36px;
       margin-top: 60px;
 
+   }
+
+   .about_us__inner-last .about_us__text {
+      width: 100%;
+   }
+
+   .about_us__title {
+      font-size: 36px;
+      line-height: 41px;
+      margin: 0 0 15px 0;
+   }
+
+   .about_us__text {
+      font-size: 18px;
+      line-height: 21px;
+      margin-bottom: 51px;
+   }
+
+   .about_us__row {
+      .about_us__img--row {
+         margin-right: -170px;
+      }
+   }
+
+   .about_us__title--last {
+      margin-top: 101px;
+   }
+
+   .about_us__inner-last .about_us__title {
+      width: 100%;
+   }
+
+   .footer {
+      margin-top: 55px;
+   }
+
+   .footer__text {
+      padding: 69px 35px 97px 35px;
+      font-size: 22px;
+      line-height: 25px;
+   }
+
+   .footer__button {
+      margin: 0 0 64px 0;
    }
 
 }
@@ -227,6 +316,80 @@
       }
    }
 
+   .about_us__inner-last {
+      margin-top: 0;
+
+      .about_us__img3 {
+         max-width: 345px;
+         height: 392px;
+      }
+
+      .about_us__img--phone2 {
+         right: 34px;
+         left: auto;
+         max-width: 137px;
+         height: 274px;
+         top: 191px;
+      }
+   }
+
+   .about_us__img {
+      width: 100%;
+      max-width: 242px;
+      height: 305px;
+      object-fit: cover;
+   }
+
+   .about_us__row {
+      .about_us__img--row {
+         margin-right: -100px;
+      }
+   }
+
+   .about_us__img--phone {
+      width: 100%;
+      max-width: 145px;
+      margin-left: 30px;
+      height: 274px;
+      object-fit: cover;
+      margin-bottom: 51px;
+   }
+
+   .footer__inner {
+      flex-direction: column;
+
+      .footer__item {
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         width: 100%;
+         text-align: center;
+
+         .privacy__policy {
+            padding: 0;
+            order: 3;
+         }
+
+         .copyright {
+            order: 2;
+            margin: 34px 0 15px 0;
+         }
+      }
+
+   }
+}
+
+@media (max-width:480px) {
+   .header__item-title {
+      font-size: 38px;
+   }
+
+   .about_us__inner-last {
+
+      .about_us__img--phone2 {
+         right: -18px;
+      }
 
 
+   }
 }
