--- a/scss/media.scss
+++ b/scss/media.scss
@@ -1,5 +1,5 @@
 @media (max-width:1288px) {
-   .header__item-title {
+   .intro__title {
       margin-top: 10px;
 
 
@@ -44,6 +44,7 @@
 }
 
 @media (max-width:980px) {
+
    .intro__inner {
       flex-direction: column-reverse;
       justify-content: center;
@@ -61,9 +62,18 @@
       justify-content: flex-end;
    }
 
+   .intro__title {
+      font-size: 95px;
+      line-height: 107px;
+   }
+
    .intro__text {
       max-width: none;
       text-align: center;
+   }
+
+   .intro__item:first-child {
+      padding: 0 15px;
    }
 
    .about_us__inner {
@@ -109,8 +119,11 @@
 }
 
 @media (max-width:780px) {
-
-   .header__item-title {
+   .popup.active{
+    max-width: 550px;
+     
+   }
+   .intro__title {
       font-size: 75px;
       line-height: 107px;
    }
@@ -198,6 +211,19 @@
 }
 
 @media (max-width:580px) {
+   .popup.active{
+      max-width: 345px;
+   }
+   .intro__title-desct {
+      display: none;
+   }
+
+   .intro__title-mobail {
+      display: block;
+      margin: 24px 0 37px 0;
+   }
+
+
    .attraction__item-btn {
       background: #F27C4F;
    }
@@ -213,11 +239,11 @@
 
    }
 
-   .header__item-title {
+   .intro__title {
       font-size: 48px;
       line-height: 55px;
       padding: 0;
-      margin: 0;
+
 
       .header__item-span {
          color: #3D3745;
@@ -237,6 +263,7 @@
          max-width: 200px;
          object-fit: cover;
          position: relative;
+         margin-right: -20px;
       }
 
       .docer__inner {
@@ -380,16 +407,16 @@
 }
 
 @media (max-width:480px) {
-   .header__item-title {
+   .intro__title {
       font-size: 38px;
    }
-
-   .about_us__inner-last {
-
-      .about_us__img--phone2 {
-         right: -18px;
-      }
-
-
-   }
+   .popup.active {
+      max-width: 285px;
+      padding: 30px;
+  }
+  .close-popup {
+   top: 10px;
+   right: 10px;
+  }
+  
 }
